# KMIDS-GFM-Future-Engineer-2025

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md
.github/workflows/: release.yml
FreeCAD-Files/Assembly/: FrontAssembly.FCStd  MainAssembly.FCStd
FreeCAD-Files/Assembly/mesh_export/: Chassis_1x.stl  FrontCover_1x.stl  LidarPlate_1x.stl  MotorHolder_1x.stl  TBoneLinkageTop_1x.stl
FreeCAD-Files/Models/SteeringAckermannModel/: Body.xml  Document.xml  GuiDocument.xml  Origin.Gui.xml  Origin.xml  Origin001.Gui.xml  Origin001.xml  Part.xml  Sketch.Gui.xml  Sketch.xml  Sketch001.Gui.xml  Sketch001.xml  Spreadsheet.xml  XY_Plane.Gui.xml  XY_Plane.xml  XY_Plane001.Gui.xml  XY_Plane001.xml  XZ_Plane.Gui.xml  XZ_Plane.xml  (+18 more)
FreeCAD-Files/Parts/: Chassis.FCStd  FrontCover.FCStd  LidarPlate.FCStd  MotorHolder.FCStd  MotorPlate.FCStd  S0004m.FCStd
Slicer-Files/Bambu_Lab_P1S_(Bambu_Slicer)/: Chassis_1x.3mf
Slicer-Files/Ender_3_V3_KE_(Cura_Slicer)/: CE3V3KE_FrontCover_1x.3mf  CE3V3KE_LidarPlate_1x.3mf  CE3V3KE_Linkages.3mf
code/: README.md
code/Future_Engineer_2025_Randomizer/: obstacle_challenge.py  open_challenge.py
code/raspberry-pi-5/: CMakeLists.txt  Dockerfile.compile  Dockerfile.cross  build-arm64.sh  build-log_viewer-native.sh  build.sh  upload.sh
code/raspberry-pi-5/apps/challenges/obstacle_challenge/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/apps/log_to_video/: CMakeLists.txt  main.cpp
code/raspberry-pi-5/src/controllers/: CMakeLists.txt  lidar_controller.cpp  lidar_controller.h
code/shared/: README.md
docs/: dhcp-server-on-ethernet-port.md  fsm-architecture.md  image-drive-linux.md
other/: dhcp-server-on-ethernet-port.md
video/: video.md
(+216 files in other folders)
